<resources>
    <string name="app_name">MySafe</string>
    <string name="home_title">功能列表</string>
    <string name="textHello">欢迎来到安全管家主界面,请选择你要运行的功能，祝您体验愉快！哈哈哈哈哈哈哈哈哈！</string>
    <string name="titleText">标题</string>
    <string name="set_title">设置中心</string>
    <string name="version_name">版本名称</string>
    <string name="psd_set">设置密码</string>
    <string name="show_set_psd">设置密码</string>
    <string name="show_confirm_psd">确认密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="input_psd">输入密码</string>
</resources>
