<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcc">

    <TextView
        style="@style/TitleStyle"
        android:background="#ffdf75"
        android:text="@string/psd_set"/>
    <EditText
        android:id="@+id/et_set_psd"
        android:hint="@string/show_set_psd"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_confirm_psd"
        android:hint="@string/show_confirm_psd"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/selector_btn_bg"
            android:id="@+id/bt_submit"
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <Button
            android:background="@drawable/selector_btn_bg"
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>